fullsimple/parser.output
   0  $accept : %entry% $end

   1  input :
   2        | input LOAD
   3        | input SHOWCONTEXT DOUBLESEMI
   4        | input DOUBLESEMI
   5        | input oneREPL

   6  oneREPL : Command DOUBLESEMI
   7          | Command SEMI oneREPL

   8  toplevel : EOF
   9           | Command SEMI toplevel

  10  Command : TermWrap
  11          | UCID TyBinder
  12          | LCID Binder

  13  TyBinder :
  14           | EQ Type

  15  Binder : COLON Type
  16         | EQ Term

  17  Type : ArrowType
  18       | REFTYPE AType

  19  ArrowType : AType ARROW ArrowType
  20            | AType

  21  AType : UCID
  22        | LPAREN Type RPAREN
  23        | TOP
  24        | FLOAT
  25        | STRING
  26        | BOOL
  27        | NAT
  28        | UNITTYPE
  29        | LCURLY TyFields RCURLY
  30        | LT TyFields GT
  31        | LIST Type

  32  LType : LSQUARE Type RSQUARE

  33  TyFields :
  34           | NETyFields

  35  NETyFields : TyField
  36             | TyField COMMA NETyFields

  37  TyField : LCID COLON Type
  38          | Type

  39  TermWrap : TermWrap COMMA LCID EQ Term
  40           | Term WHERE LCID EQ Term
  41           | Term

  42  Cases : Case
  43        | Case VBAR Cases

  44  Case : LT LCID EQ LCID GT DARROW AppTerm

  45  Term : AppTerm
  46       | AppTerm COLONEQ AppTerm
  47       | CASE Term OF Cases
  48       | Term COLON Term
  49       | LET LCID EQ Term IN Term
  50       | LET USCORE EQ Term IN Term
  51       | LAMBDA LCID COLON Type DOT Term
  52       | IF Term THEN Term ELSE Term
  53       | LETREC LCID COLON Type EQ Term IN Term
  54       | CONS LType ATerm ATerm
  55       | HEAD LType ATerm
  56       | TAIL LType ATerm
  57       | ISNIL LType ATerm

  58  AppTerm : PathTerm
  59          | PathTerm TIMESFLOAT PathTerm
  60          | FIX PathTerm
  61          | REF PathTerm
  62          | BANG PathTerm
  63          | SUCC PathTerm
  64          | PRED PathTerm
  65          | ISZERO PathTerm
  66          | AppTerm PathTerm

  67  PathTerm : PathTerm DOT LCID
  68           | PathTerm DOT INTV
  69           | AscribeTerm

  70  AscribeTerm : ATerm AS Type
  71              | ATerm

  72  ATerm : LPAREN TermSeq RPAREN
  73        | LCURLY Fields RCURLY
  74        | LT LCID EQ Term GT AS Type
  75        | LCID
  76        | STRINGV
  77        | FLOATV
  78        | UNIT
  79        | TRUE
  80        | FALSE
  81        | INTV
  82        | NIL LType

  83  TermSeq : Term
  84          | Term SEMI TermSeq

  85  Fields :
  86         | NEFields

  87  NEFields : Field
  88           | Field COMMA NEFields

  89  Field : LCID EQ Term
  90        | Term

  91  %entry% : '\001' toplevel
  92          | '\002' input

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . toplevel  (91)

	REF  shift 4
	TAIL  shift 5
	HEAD  shift 6
	ISNIL  shift 7
	CONS  shift 8
	NIL  shift 9
	LETREC  shift 10
	FIX  shift 11
	CASE  shift 12
	UNIT  shift 13
	LET  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LAMBDA  shift 18
	IF  shift 19
	TRUE  shift 20
	FALSE  shift 21
	UCID  shift 22
	LCID  shift 23
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	BANG  shift 27
	EOF  shift 28
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	.  error

	toplevel  goto 32
	Command  goto 33
	TermWrap  goto 34
	Term  goto 35
	AppTerm  goto 36
	ATerm  goto 37
	PathTerm  goto 38
	AscribeTerm  goto 39


state 2
	%entry% : '\002' . input  (92)
	input : .  (1)

	.  reduce 1

	input  goto 40


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	AppTerm : REF . PathTerm  (61)

	NIL  shift 9
	UNIT  shift 13
	TRUE  shift 20
	FALSE  shift 21
	LCID  shift 41
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	.  error

	ATerm  goto 37
	PathTerm  goto 42
	AscribeTerm  goto 39


state 5
	Term : TAIL . LType ATerm  (56)

	LSQUARE  shift 43
	.  error

	LType  goto 44


state 6
	Term : HEAD . LType ATerm  (55)

	LSQUARE  shift 43
	.  error

	LType  goto 45


state 7
	Term : ISNIL . LType ATerm  (57)

	LSQUARE  shift 43
	.  error

	LType  goto 46


state 8
	Term : CONS . LType ATerm ATerm  (54)

	LSQUARE  shift 43
	.  error

	LType  goto 47


state 9
	ATerm : NIL . LType  (82)

	LSQUARE  shift 43
	.  error

	LType  goto 48


state 10
	Term : LETREC . LCID COLON Type EQ Term IN Term  (53)

	LCID  shift 49
	.  error


state 11
	AppTerm : FIX . PathTerm  (60)

	NIL  shift 9
	UNIT  shift 13
	TRUE  shift 20
	FALSE  shift 21
	LCID  shift 41
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	.  error

	ATerm  goto 37
	PathTerm  goto 50
	AscribeTerm  goto 39


state 12
	Term : CASE . Term OF Cases  (47)

	REF  shift 4
	TAIL  shift 5
	HEAD  shift 6
	ISNIL  shift 7
	CONS  shift 8
	NIL  shift 9
	LETREC  shift 10
	FIX  shift 11
	CASE  shift 12
	UNIT  shift 13
	LET  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LAMBDA  shift 18
	IF  shift 19
	TRUE  shift 20
	FALSE  shift 21
	LCID  shift 41
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	BANG  shift 27
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	.  error

	Term  goto 51
	AppTerm  goto 36
	ATerm  goto 37
	PathTerm  goto 38
	AscribeTerm  goto 39


state 13
	ATerm : UNIT .  (78)

	.  reduce 78


state 14
	Term : LET . LCID EQ Term IN Term  (49)
	Term : LET . USCORE EQ Term IN Term  (50)

	LCID  shift 52
	USCORE  shift 53
	.  error


state 15
	AppTerm : SUCC . PathTerm  (63)

	NIL  shift 9
	UNIT  shift 13
	TRUE  shift 20
	FALSE  shift 21
	LCID  shift 41
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	.  error

	ATerm  goto 37
	PathTerm  goto 54
	AscribeTerm  goto 39


state 16
	AppTerm : PRED . PathTerm  (64)

	NIL  shift 9
	UNIT  shift 13
	TRUE  shift 20
	FALSE  shift 21
	LCID  shift 41
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	.  error

	ATerm  goto 37
	PathTerm  goto 55
	AscribeTerm  goto 39


state 17
	AppTerm : ISZERO . PathTerm  (65)

	NIL  shift 9
	UNIT  shift 13
	TRUE  shift 20
	FALSE  shift 21
	LCID  shift 41
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	.  error

	ATerm  goto 37
	PathTerm  goto 56
	AscribeTerm  goto 39


state 18
	Term : LAMBDA . LCID COLON Type DOT Term  (51)

	LCID  shift 57
	.  error


state 19
	Term : IF . Term THEN Term ELSE Term  (52)

	REF  shift 4
	TAIL  shift 5
	HEAD  shift 6
	ISNIL  shift 7
	CONS  shift 8
	NIL  shift 9
	LETREC  shift 10
	FIX  shift 11
	CASE  shift 12
	UNIT  shift 13
	LET  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LAMBDA  shift 18
	IF  shift 19
	TRUE  shift 20
	FALSE  shift 21
	LCID  shift 41
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	BANG  shift 27
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	.  error

	Term  goto 58
	AppTerm  goto 36
	ATerm  goto 37
	PathTerm  goto 38
	AscribeTerm  goto 39


state 20
	ATerm : TRUE .  (79)

	.  reduce 79


state 21
	ATerm : FALSE .  (80)

	.  reduce 80


state 22
	Command : UCID . TyBinder  (11)
	TyBinder : .  (13)

	EQ  shift 59
	SEMI  reduce 13
	DOUBLESEMI  reduce 13

	TyBinder  goto 60


23: shift/reduce conflict (shift 61, reduce 75) on COLON
state 23
	Command : LCID . Binder  (12)
	ATerm : LCID .  (75)

	COLON  shift 61
	EQ  shift 62
	NIL  reduce 75
	TIMESFLOAT  reduce 75
	AS  reduce 75
	UNIT  reduce 75
	WHERE  reduce 75
	TRUE  reduce 75
	FALSE  reduce 75
	LCID  reduce 75
	INTV  reduce 75
	FLOATV  reduce 75
	STRINGV  reduce 75
	COLONEQ  reduce 75
	COMMA  reduce 75
	DOT  reduce 75
	LCURLY  reduce 75
	LPAREN  reduce 75
	LT  reduce 75
	SEMI  reduce 75
	DOUBLESEMI  reduce 75

	Binder  goto 63


state 24
	ATerm : INTV .  (81)

	.  reduce 81


state 25
	ATerm : FLOATV .  (77)

	.  reduce 77


state 26
	ATerm : STRINGV .  (76)

	.  reduce 76


state 27
	AppTerm : BANG . PathTerm  (62)

	NIL  shift 9
	UNIT  shift 13
	TRUE  shift 20
	FALSE  shift 21
	LCID  shift 41
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	.  error

	ATerm  goto 37
	PathTerm  goto 64
	AscribeTerm  goto 39


state 28
	toplevel : EOF .  (8)

	.  reduce 8


state 29
	ATerm : LCURLY . Fields RCURLY  (73)
	Fields : .  (85)

	REF  shift 4
	TAIL  shift 5
	HEAD  shift 6
	ISNIL  shift 7
	CONS  shift 8
	NIL  shift 9
	LETREC  shift 10
	FIX  shift 11
	CASE  shift 12
	UNIT  shift 13
	LET  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LAMBDA  shift 18
	IF  shift 19
	TRUE  shift 20
	FALSE  shift 21
	LCID  shift 65
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	BANG  shift 27
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	RCURLY  reduce 85

	Term  goto 66
	AppTerm  goto 36
	ATerm  goto 37
	PathTerm  goto 38
	AscribeTerm  goto 39
	Fields  goto 67
	NEFields  goto 68
	Field  goto 69


state 30
	ATerm : LPAREN . TermSeq RPAREN  (72)

	REF  shift 4
	TAIL  shift 5
	HEAD  shift 6
	ISNIL  shift 7
	CONS  shift 8
	NIL  shift 9
	LETREC  shift 10
	FIX  shift 11
	CASE  shift 12
	UNIT  shift 13
	LET  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LAMBDA  shift 18
	IF  shift 19
	TRUE  shift 20
	FALSE  shift 21
	LCID  shift 41
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	BANG  shift 27
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	.  error

	Term  goto 70
	AppTerm  goto 36
	ATerm  goto 37
	PathTerm  goto 38
	AscribeTerm  goto 39
	TermSeq  goto 71


state 31
	ATerm : LT . LCID EQ Term GT AS Type  (74)

	LCID  shift 72
	.  error


state 32
	%entry% : '\001' toplevel .  (91)

	.  reduce 91


state 33
	toplevel : Command . SEMI toplevel  (9)

	SEMI  shift 73
	.  error


state 34
	Command : TermWrap .  (10)
	TermWrap : TermWrap . COMMA LCID EQ Term  (39)

	COMMA  shift 74
	SEMI  reduce 10
	DOUBLESEMI  reduce 10


state 35
	TermWrap : Term . WHERE LCID EQ Term  (40)
	TermWrap : Term .  (41)
	Term : Term . COLON Term  (48)

	WHERE  shift 75
	COLON  shift 76
	COMMA  reduce 41
	SEMI  reduce 41
	DOUBLESEMI  reduce 41


state 36
	Term : AppTerm .  (45)
	Term : AppTerm . COLONEQ AppTerm  (46)
	AppTerm : AppTerm . PathTerm  (66)

	NIL  shift 9
	UNIT  shift 13
	TRUE  shift 20
	FALSE  shift 21
	LCID  shift 41
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	COLONEQ  shift 77
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	OF  reduce 45
	WHERE  reduce 45
	IN  reduce 45
	THEN  reduce 45
	ELSE  reduce 45
	COLON  reduce 45
	COMMA  reduce 45
	GT  reduce 45
	RCURLY  reduce 45
	RPAREN  reduce 45
	SEMI  reduce 45
	DOUBLESEMI  reduce 45

	ATerm  goto 37
	PathTerm  goto 78
	AscribeTerm  goto 39


state 37
	AscribeTerm : ATerm . AS Type  (70)
	AscribeTerm : ATerm .  (71)

	AS  shift 79
	NIL  reduce 71
	TIMESFLOAT  reduce 71
	OF  reduce 71
	UNIT  reduce 71
	WHERE  reduce 71
	IN  reduce 71
	THEN  reduce 71
	ELSE  reduce 71
	TRUE  reduce 71
	FALSE  reduce 71
	LCID  reduce 71
	INTV  reduce 71
	FLOATV  reduce 71
	STRINGV  reduce 71
	COLON  reduce 71
	COLONEQ  reduce 71
	COMMA  reduce 71
	DOT  reduce 71
	GT  reduce 71
	LCURLY  reduce 71
	LPAREN  reduce 71
	LT  reduce 71
	RCURLY  reduce 71
	RPAREN  reduce 71
	SEMI  reduce 71
	VBAR  reduce 71
	DOUBLESEMI  reduce 71


state 38
	AppTerm : PathTerm .  (58)
	AppTerm : PathTerm . TIMESFLOAT PathTerm  (59)
	PathTerm : PathTerm . DOT LCID  (67)
	PathTerm : PathTerm . DOT INTV  (68)

	TIMESFLOAT  shift 80
	DOT  shift 81
	NIL  reduce 58
	OF  reduce 58
	UNIT  reduce 58
	WHERE  reduce 58
	IN  reduce 58
	THEN  reduce 58
	ELSE  reduce 58
	TRUE  reduce 58
	FALSE  reduce 58
	LCID  reduce 58
	INTV  reduce 58
	FLOATV  reduce 58
	STRINGV  reduce 58
	COLON  reduce 58
	COLONEQ  reduce 58
	COMMA  reduce 58
	GT  reduce 58
	LCURLY  reduce 58
	LPAREN  reduce 58
	LT  reduce 58
	RCURLY  reduce 58
	RPAREN  reduce 58
	SEMI  reduce 58
	VBAR  reduce 58
	DOUBLESEMI  reduce 58


state 39
	PathTerm : AscribeTerm .  (69)

	.  reduce 69


state 40
	input : input . LOAD  (2)
	input : input . SHOWCONTEXT DOUBLESEMI  (3)
	input : input . DOUBLESEMI  (4)
	input : input . oneREPL  (5)
	%entry% : '\002' input .  (92)

	LOAD  shift 82
	SHOWCONTEXT  shift 83
	REF  shift 4
	TAIL  shift 5
	HEAD  shift 6
	ISNIL  shift 7
	CONS  shift 8
	NIL  shift 9
	LETREC  shift 10
	FIX  shift 11
	CASE  shift 12
	UNIT  shift 13
	LET  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	LAMBDA  shift 18
	IF  shift 19
	TRUE  shift 20
	FALSE  shift 21
	UCID  shift 22
	LCID  shift 23
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	BANG  shift 27
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	DOUBLESEMI  shift 84
	$end  reduce 92

	oneREPL  goto 85
	Command  goto 86
	TermWrap  goto 34
	Term  goto 35
	AppTerm  goto 36
	ATerm  goto 37
	PathTerm  goto 38
	AscribeTerm  goto 39


state 41
	ATerm : LCID .  (75)

	.  reduce 75


state 42
	AppTerm : REF PathTerm .  (61)
	PathTerm : PathTerm . DOT LCID  (67)
	PathTerm : PathTerm . DOT INTV  (68)

	DOT  shift 81
	NIL  reduce 61
	OF  reduce 61
	UNIT  reduce 61
	WHERE  reduce 61
	IN  reduce 61
	THEN  reduce 61
	ELSE  reduce 61
	TRUE  reduce 61
	FALSE  reduce 61
	LCID  reduce 61
	INTV  reduce 61
	FLOATV  reduce 61
	STRINGV  reduce 61
	COLON  reduce 61
	COLONEQ  reduce 61
	COMMA  reduce 61
	GT  reduce 61
	LCURLY  reduce 61
	LPAREN  reduce 61
	LT  reduce 61
	RCURLY  reduce 61
	RPAREN  reduce 61
	SEMI  reduce 61
	VBAR  reduce 61
	DOUBLESEMI  reduce 61


state 43
	LType : LSQUARE . Type RSQUARE  (32)

	TOP  shift 87
	REFTYPE  shift 88
	LIST  shift 89
	STRING  shift 90
	FLOAT  shift 91
	UNITTYPE  shift 92
	BOOL  shift 93
	NAT  shift 94
	UCID  shift 95
	LCURLY  shift 96
	LPAREN  shift 97
	LT  shift 98
	.  error

	Type  goto 99
	ArrowType  goto 100
	AType  goto 101


state 44
	Term : TAIL LType . ATerm  (56)

	NIL  shift 9
	UNIT  shift 13
	TRUE  shift 20
	FALSE  shift 21
	LCID  shift 41
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	.  error

	ATerm  goto 102


state 45
	Term : HEAD LType . ATerm  (55)

	NIL  shift 9
	UNIT  shift 13
	TRUE  shift 20
	FALSE  shift 21
	LCID  shift 41
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	.  error

	ATerm  goto 103


state 46
	Term : ISNIL LType . ATerm  (57)

	NIL  shift 9
	UNIT  shift 13
	TRUE  shift 20
	FALSE  shift 21
	LCID  shift 41
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	.  error

	ATerm  goto 104


state 47
	Term : CONS LType . ATerm ATerm  (54)

	NIL  shift 9
	UNIT  shift 13
	TRUE  shift 20
	FALSE  shift 21
	LCID  shift 41
	INTV  shift 24
	FLOATV  shift 25
	STRINGV  shift 26
	LCURLY  shift 29
	LPAREN  shift 30
	LT  shift 31
	.  error

	ATerm  goto 105


state 48
	ATerm : NIL LType .  (82)

	.  reduce 82


state 49
	Term : LETREC LCID . COLON Type EQ Term IN Term  (53)
